# Objaverse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: pipeline-plan.mmd
src/objaverse_search/: __init__.py  bench.py  cli.py  config.py  download.py  embed.py  index.py  metadata.py  projection.py  render.py  server.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/atlas/: page.tsx
web/app/perf/: page.tsx
web/components/: AtlasScene.tsx  ModelViewer.tsx  ResultCard.tsx  ResultGrid.tsx  SearchBar.tsx  SiteHeader.tsx
web/components/atlas/: CategoryList.tsx  DashboardSidebar.tsx  DashboardTopBar.tsx  HoverTooltip.tsx  MetricTile.tsx  RecentPicks.tsx  SelectedPanel.tsx
web/components/perf/: ComparisonBars.tsx  CornerBrackets.tsx  HardwareBanner.tsx  HeroSpeedup.tsx  PerfTopBar.tsx  RaceCell.tsx  RaceControls.tsx  RaceReplay.tsx  StatsGrid.tsx
web/components/ui/: NavPill.tsx  PillButton.tsx
web/lib/: api.ts  atlas-data.ts  perf-clock.ts
