[project]
name = "objaverse-search"
version = "0.1.0"
description = "Semantic 3D model search over Objaverse-LVIS, powered by Daft"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "BABTUNA" }]

dependencies = [
  # Data pipeline
  "getdaft>=0.3.0",
  "pyarrow>=15.0.0",
  "numpy>=1.26,<2.0",
  "pandas>=2.1",

  # Objaverse dataset
  "objaverse>=0.1.7",

  # 3D rendering — PyVista/VTK works headlessly on Windows, macOS, and Linux
  # with no extra system libs (unlike pyrender, which needs EGL/OSMesa).
  "trimesh>=4.0",
  "pyvista>=0.43",
  "vtk>=9.3",
  "Pillow>=10.0",

  # Embeddings
  "torch>=2.2",
  "torchvision>=0.17",
  "open_clip_torch>=2.24",
  "ftfy",
  "regex",

  # Vector store
  "lancedb>=0.10",

  # Dimensionality reduction for the latent-space atlas
  "umap-learn>=0.5",

  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",

  # Utilities
  "tqdm",
  "typer>=0.12",
  "rich>=13.7",
  "psutil>=5.9",

  # Ray powers Daft's real cross-process parallelism on a single machine.
  # The native runner ignores into_partitions, so the bench can't actually
  # show concurrent execution without this.
  "ray>=2.10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
  "ipython>=8.20",
]

[project.scripts]
objaverse-search = "objaverse_search.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/objaverse_search"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
